# chessmaster

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 27ba4ca3941b_add_users_table_user_id_scoping.py  86d162045657_baseline_schema.py  b8bc544e50f3_multi_user_schema.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/auth/: deps.py  models.py  schemas.py  users.py
backend/app/routers/: analysis.py  digest.py  endgame.py  export.py  games.py  opening_book.py  openings.py  patterns.py  peer_comparison.py  pgn_import.py  puzzles.py  rating_predictor.py  stats.py  (+5 more)
backend/tests/: conftest.py  test_analysis_ingest.py  test_api_endpoints.py  test_auth_endpoints.py  test_auth_flow.py  test_chesscom_client.py  test_database_connection.py  test_digest.py  test_email_service.py  test_endgame.py  test_export.py  test_fen_utils.py  test_games_isolation.py  test_lichess_client.py  test_models.py  test_models_user_scoping.py  test_move_classifier.py  test_opening_book.py  test_pattern_engine.py  test_peer_comparison.py  test_pgn_import.py  test_pgn_import_scoping.py  test_pgn_parser.py  test_puzzles.py  test_rating_predictor.py  test_report_scoping.py  test_router_isolation_9a.py  test_router_isolation_9b.py  test_router_isolation_9c.py  test_scouting.py  test_scouting_auth.py  test_sync_scoping.py  test_tactical_detector.py  test_tilt.py  test_time_management.py  test_user_model.py
(+122 files in other folders)
